[gd_scene load_steps=2 format=3 uid="uid://b15w0n5jyv606"]

[ext_resource type="Script" uid="uid://k760bua63b28" path="res://control.gd" id="1_a42w7"]

[node name="Setting" type="CanvasLayer"]

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.219608)

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_a42w7")

[node name="Panel" type="Panel" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Control/Panel/VBoxContainer"]
layout_mode = 2
text = "Master Volume"

[node name="Volume Slider" type="HSlider" parent="Control/Panel/VBoxContainer"]
layout_mode = 2
max_value = 1.0
step = 0.05

[node name="Fullscreen Check" type="CheckBox" parent="Control/Panel/VBoxContainer"]
layout_mode = 2
text = "Fullscreen"

[node name="Back" type="Button" parent="Control/Panel/VBoxContainer"]
layout_mode = 2
text = "Back"

[connection signal="value_changed" from="Control/Panel/VBoxContainer/Volume Slider" to="Control" method="_on_volume_slider_value_changed"]
[connection signal="toggled" from="Control/Panel/VBoxContainer/Fullscreen Check" to="Control" method="_on_fullscreen_check_toggled"]
[connection signal="pressed" from="Control/Panel/VBoxContainer/Back" to="Control" method="_on_back_pressed"]
